Fix [Api Design] : Add request Payload Validation
