# src/routes/v1/index.js
@@ -1,4 +1,8 @@
-const { authController, articleController } = require("../../controllers");
+const {
+  authController,
+  articleController,
+  commentController,
+} = require("../../controllers");
 const { authenticate } = require("../../middlewares");
 
 const router = require("express").Router();
@@ -14,8 +18,18 @@ router
   .get(articleController.findAllItems)
   .post(authenticate, articleController.create);
 
-router.route("/api/v1/articles/:id").get(articleController.findSingleItem);
-// .patch(authenticate, articleController.updateItem)
-// .delete(authenticate, ownership("Article"), articleController.removeItem);
+router
+  .route("/api/v1/articles/:id")
+  .get(articleController.findSingleItem)
+  .patch(authenticate, articleController.updateItem)
+  .delete(authenticate, articleController.removeItem);
+//ownership("Article"),
+
+// Comment routes
+router
+  .route("/api/v1/comments/:id")
+  .post(authenticate, commentController.create)
+  .patch(authenticate, commentController.updateItem)
+  .delete(authenticate, commentController.removeItem);
 
 module.exports = router;
